--- a/views/index.jade
+++ b/views/index.jade
@@ -3,5 +3,7 @@ extends layout
 block content
   h2 Home
   br
-  a(href="/list?page=1&display=10") Click here for the list of states
+  a(href="/states") Click here for the list of states
+  br
+  a(href="/countries") Click here for the list of countries
     
