before refactor to a factory

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,12 @@
 extends layout
 
 block content
-  h2 Home
-  br
-  a(href="/states") Click here for the list of states
-  br
-  a(href="/countries") Click here for the list of countries
+  .home
+    h2 Home
+    br
+    a(href="/states") Click here for the list of states
+    br
+    a(href="/countries") Click here for the list of countries
+    br
+    a(href="/ytest") Ytest
     
